--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.en.html">Why Open Source Misses the Point of Free Software (2016)</a>
+                                    <a href="https://akr.am/blog/posts/gitlab-isnt-really-open-source">GitLab Isn’t Really Open-Source</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17230785">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17229940">
                                         
-                                            151 comments
+                                            139 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pera">pera</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528137811"
+                                            href="https://news.ycombinator.com/user?id=thefilmore">thefilmore</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528132632"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    245 points
                                 </span>
                             </td>
                         </tr>
@@ -269,7 +269,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17230510">
                                         
-                                            355 comments
+                                            356 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=artsandsci">artsandsci</a></strong> &nbsp;•&nbsp;
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528055363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    386 points
+                                    387 points
                                 </span>
                             </td>
                         </tr>
@@ -515,7 +515,7 @@
                                             href="https://news.ycombinator.com/user?id=zrail">zrail</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528146295"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    91 points
+                                    92 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=plonkus">plonkus</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528144742"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    94 points
+                                    96 points
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=andRyanMiller">andRyanMiller</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528088194"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    248 points
+                                    249 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528177204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528177805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
