--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://vertx.io/blog/eclipse-vert-x-goes-native/">Eclipse Vert.x goes Native</a>
+                                    <a href="https://www.sfgate.com/business/article/Man-dies-Mount-Everest-ASKfm-sherpa-cryptocurrency-12967630.php">Man dies on Mount Everest during cryptocurrency promotional stunt</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17236022">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17238766">
                                         
-                                            61 comments
+                                            45 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Samtaran">Samtaran</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528189605"
+                                            href="https://news.ycombinator.com/user?id=slapshot">slapshot</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528213490"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    167 points
+                                    88 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=r4um">r4um</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528218457"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    54 points
+                                    55 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528239605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528240204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
