--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,6 +215,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://www.windowscentral.com/asus-novago-hp-envy-x2-always-connected-pcs-now-available-microsoft-store">Microsoft is now selling ARM-Based Windows 10 Machines</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17234488">
+                                        
+                                            2 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=bonyt">bonyt</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528165741"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    27 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://torrentfreak.com/flight-sim-company-threatens-reddit-mods-over-libellous-drm-posts-180604/">FlightSim Co threatens users comments about DRM pw logger/system32 obfuscator</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -444,7 +468,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528241404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528242003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
