--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.governmentattic.org/28docs/NSAsecurityPosters_1950s-60s.pdf">NSA posters from the 50s and 60s [pdf]</a>
+                                    <a href="https://medium.com/@cornett/how-to-leverage-introversion-as-a-career-strength-7a1c0371f2fa">Leveraging Introversion as a Career Strength</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17222827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17236294">
                                         
-                                            110 comments
+                                            31 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rinze">rinze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528065930"
+                                            href="https://news.ycombinator.com/user?id=jchadhowell">jchadhowell</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528193413"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    370 points
+                                    104 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528243204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528243804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
