--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -239,6 +239,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://www.theverge.com/2018/6/5/17427150/facial-recognition-vehicle-face-system-homeland-security-immigration-customs">New Homeland Security system will bring facial recognition to land borders</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17237490">
+                                        
+                                            2 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528206257"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    13 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://torrentfreak.com/flight-sim-company-threatens-reddit-mods-over-libellous-drm-posts-180604/">FlightSim Co threatens users comments about DRM pw logger/system32 obfuscator</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -347,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=Thevet">Thevet</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528164988"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    16 points
+                                    17 points
                                 </span>
                             </td>
                         </tr>
@@ -444,7 +468,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528243804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528244404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
