--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/martenbjork/github-xp">GitHub XP – GitHub Windows XP Theme</a>
+                                    <a href="http://www.typescriptlang.org/docs/handbook/release-notes/typescript-2-9.html">TypeScript 2.9 is now available</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17241612">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17242026">
                                         
-                                            29 comments
+                                            14 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=vlucas">vlucas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528229826"
+                                            href="https://news.ycombinator.com/user?id=hamstercat">hamstercat</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528232589"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    112 points
+                                    96 points
                                 </span>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528192020"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    363 points
+                                    364 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=WoodenChair">WoodenChair</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528141857"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    639 points
+                                    640 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528227063"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    105 points
+                                    106 points
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=leephillips">leephillips</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528199656"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    242 points
+                                    243 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=samatman">samatman</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528165885"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    385 points
+                                    386 points
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17238070">
                                         
-                                            113 comments
+                                            114 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bookofjoe">bookofjoe</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528246204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528246804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
