--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.windowscentral.com/asus-novago-hp-envy-x2-always-connected-pcs-now-available-microsoft-store">Microsoft is now selling ARM-Based Windows 10 Machines</a>
+                                    <a href="https://www.theguardian.com/environment/2018/jun/05/the-planet-is-on-edge-of-a-global-plastic-calamity">The planet is on edge of a global plastic calamity</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17234488">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17236300">
                                         
                                             2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bonyt">bonyt</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528165741"
+                                            href="https://news.ycombinator.com/user?id=richardhod">richardhod</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528193491"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    27 points
+                                    18 points
                                 </span>
                             </td>
                         </tr>
@@ -444,7 +444,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528248604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528249203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
