--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.media.uzh.ch/en/Press-Releases/2018/CMS-Experiment.html">Direct Coupling of the Higgs Boson to the Top Quark Observed</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-05/this-former-tesla-staffer-became-an-internet-millionaire-in-his-spare-time">A Former Tesla Staffer Became an Internet Millionaire in His Spare Time</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17235171">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17239128">
                                         
-                                            95 comments
+                                            106 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bellinom">bellinom</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528175974"
+                                            href="https://news.ycombinator.com/user?id=pdog">pdog</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528215328"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    244 points
+                                    113 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17229397">
                                         
-                                            297 comments
+                                            298 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sqdbps">sqdbps</a></strong> &nbsp;•&nbsp;
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528138197"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    258 points
+                                    259 points
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528055363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    416 points
+                                    417 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528249203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528249803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
