--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -99,9 +99,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242136" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.feram.io/blog/2018-06-05_transity_the_future_of_plain_text_accounting/">Transity – Plain Text Accounting</a>
+                                    <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
                                 </span>
                             </td>
                         </tr>
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242136" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
+                                    <a href="https://www.feram.io/blog/2018-06-05_transity_the_future_of_plain_text_accounting/">Transity – Plain Text Accounting</a>
                                 </span>
                             </td>
                         </tr>
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/?id=da7a0ab5b4babbe5d7a46f852582be06a00a28f0">Linux 4.17: add support for the Speck block cipher</a>
+                                    <a href="https://www.trulia.com/blog/why-my-monster-commute-is-worth-it/">Super Commuters Explain Why Their Neighborhoods Are Worth It</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17237651">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17241479">
                                         
-                                            2 comments
+                                            9 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pritambaral">pritambaral</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528207475"
+                                            href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528228849"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    17 points
+                                    12 points
                                 </span>
                             </td>
                         </tr>
@@ -444,7 +444,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528275604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528276204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
